<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/the"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" android:orientation="vertical">

    <EditText
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_fullname"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/email_id"
        android:textColor="#ffffff"
        android:inputType="textEmailAddress"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_phone"
        android:ems="10"
        android:hint="@string/Mobile"
        android:textColor="#ffffff"
        android:inputType="number"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_address"
        android:ems="10"
        android:textColor="#ffffff"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        android:lines="2"
        android:textColorHint="#ffffff" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#ffffff"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:text="@string/female"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" tools:targetApi="lollipop"/>

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#ffffff"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:text="@string/male"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />
    </RadioGroup>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/Text"
                android:layout_width="match_parent"
                android:checked="true"
                android:drawableStart="@drawable/ic_married"
                android:showText="true"
                android:paddingEnd="30sp"
                android:text="@string/married"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/simpleToggleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textOff="@string/no"
                android:textOn="YES"/>

        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:ems="10"
        android:drawableStart="@drawable/ic_birth"
        android:clickable="true"
        android:textColor="#ffffff"
        android:inputType="textPersonName"
        android:text="Birthday" />

    <Button
        android:id="@+id/sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="#ffffff" />
</LinearLayout>

